--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <div class="mobile-container">
-            <div class="topnav">
 
+            <div class="topnav">
                 <div class="navnav">
                     <img src="images/logolevenslust.png" alt="#">
-                    <h2>Organisatie voor Bijzondere Jeugdzorg</h2>
+                    <h2>Huize Levenslust VZW</h2>
                 </div>
                 <div class="start">
                     <div id="myLinks">
@@ -37,7 +37,7 @@
     <main>
         <div id="home">
             <div class="home">
-                <h1>Home</h1>
+                <h1>Organisatie voor Bijzondere Jeugdzorg</h1>
             </div>
         </div>
         <!----------------------------------------aboutus---------------------------------->
@@ -68,7 +68,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2021/huizelevenslustvzw/Organisatie voor Bijzondere Jeugdzorg </p>
+        <p>© 2021/ADAHCHOUR NAWFAL/huizenlevenslust:Organisatie voor Bijzondere Jeugdzorg </p>
     </footer>
 </body>
 
