--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
     <main>
         <div id="home">
             <div class="home">
-                <h1>Organisatie voor Bijzondere Jeugdzorg</h1>
+                <div class="spatie">
+
+                </div>
+                <div class="text">
+                    <h1>Organisatie voor Bijzondere Jeugdzorg</h1>
+                    <p>Wat is Levenslust?
+                        Huize Levenslust is erkend als Organisatie voor Bijzondere Jeugdzorg.<br>
+                        Onze subsidiërende overheid is het Ministerie van Vlaamse Gemeenschap, Agentschap
+                        Jongerenwelzijn.<br>
+
+                        Huize Levenslust vzw is een kleinschalige voorziening in het oosten van de provincie
+                        Vlaams-Brabant.<br>
+                        De voorziening is gevestigd nabij de grens tussen de provincies Vlaams-Brabant en Limburg.<br>
+                        Orsmaal-Gussenhoven, deelgemeente van Linter is een dorpje, gelegen tussen de centrumsteden
+                        Tienen,<br>
+                        Sint-Truiden en Landen.
+
+                        Wij bieden plaats aan 12 kinderen en jongeren, van 0 tot 18 jaar, zowel jongens als meisjes.<br>
+                        Zij kunnen omwille van omstandigheden tijdelijk niet bij hun ouders blijven. Naast de
+                        residentiële<br>
+                        opvang voorzien we ook in begeleiding van de jongeren en hun context.<br></p>
+                </div>
             </div>
         </div>
         <!----------------------------------------aboutus---------------------------------->
@@ -48,10 +69,9 @@
         </div>
 
         <!----------------------------------------contact---------------------------------->
-        <div class="contact">
-            <div id="contact">
-                <h1>Contact</h1>
-
+        <div id="contact">
+            <h1>Contact</h1>
+            <div class="contact">
                 <div class="appel">
                     <img src="images/appel2.png" alt="#">
                     <p>011/78.01.58</p>
@@ -65,10 +85,13 @@
                     <p>info@huizelevenslustvzw.be</p>
                 </div>
             </div>
+            <div class="kaart">
+                <img src="images/Capture d’écran 2022-08-29 à 17.02.01.png" alt="#">
+            </div>
         </div>
     </main>
     <footer>
-        <p>© 2021/ADAHCHOUR NAWFAL/huizenlevenslust:Organisatie voor Bijzondere Jeugdzorg </p>
+        <p>© 2022/ADAHCHOUR NAWFAL/Huizenlevenslust:Organisatie voor Bijzondere Jeugdzorg </p>
     </footer>
 </body>
 
