--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="topnav">
                 <div class="navnav">
-                    <img src="images/logolevenslust.png" alt="#">
+                    <img src="images/levenslust logo.jpeg" alt="#">
                     <h2>Huize Levenslust VZW</h2>
                 </div>
                 <div class="start">
@@ -63,8 +63,48 @@
         </div>
         <!----------------------------------------aboutus---------------------------------->
         <div id="aboutus">
+            <h1>About us</h1>
             <div class="aboutus">
-                <h1>About us</h1>
+                <div class="Visie">
+                    <h2>Visie</h2>
+                    <p>- Bestrijden van de negatieve effecten van verwaarlozing<br></p>
+                    <p>- Individuele affectieve aandacht<br></p>
+                    <p>- Adequate professionele competenties en persoonskenmerken: de ideale mix voor een degelijk
+                        team<br></p>
+                    <p>- Vraaggerichtheid en participatie, zorg op maat<br></p>
+                    <p>- Contextbegeleiding<br></p>
+                    <p>- Acceptatie<br></p>
+                    <p>- Emancipatie<br></p>
+                    <p>- Toegankelijkheid<br></p>
+                    <p>- Gezond bewustzijn van eigen competenties en beperkingen<br></p>
+                </div>
+                <div class="Missie">
+                    <h2>Missie</h2>
+                    <p>Huize Levenslust richt zich, als residentiële voorziening binnen de Bijzondere Jeugdbijstand,
+                        naar kinderen en jongeren, die zich in een problematische opvoedingssituatie bevinden.
+                        Onze missie is de ontplooiingskansen van deze jongeren te vrijwaren en hun welzijn en gezondheid
+                        te bevorderen.</p>
+                    <p>Met onze werking willen wij een bijdrage leveren aan een zo volledig mogelijke
+                        integratie van deze specifieke groep minderjarigen in de maatschappij. Wij beogen zorg op maat
+                        aan te bieden. Binnen deze algemene doelgroep richt Levenslust zich, in het bijzonder, op
+                        kinderen en jongeren, die nauwelijks kunnen terugvallen op een familiaal netwerk.
+                    </p>
+                </div>
+
+                <div class="Doelstellingen">
+                    <h2>Doelstellingen</h2>
+
+                    <p> De doelstelling van Levenslust is in de eerste plaats het bieden van opvang aan die jongeren die
+                        (tijdelijk) niet meer thuis kunnen verblijven, en het begeleiden van hen en hun gezin. Bijna
+                        altijd ligt een problematische opvoedingssituatie aan de grondslag van de plaatsing. Wij willen
+                        een perspectief bieden binnen deze plaatsing. </p>
+                    <p>Een mogelijkheid om veranderings-processen op gang te brengen, bij de jongere zelf en in zijn
+                        gezinscontext. We
+                        stellen concrete doelstellingen op, in gezamenlijk overleg met de verschillende betrokkenen, en
+                        baseren deze op de algemene doelstellingen, ons aangereikt door de verwijzende instanties.</p>
+
+
+                </div>
             </div>
         </div>
 
