--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
                         De voorziening is gevestigd nabij de grens tussen de provincies Vlaams-Brabant en Limburg.<br>
                         Orsmaal-Gussenhoven, deelgemeente van Linter is een dorpje, gelegen tussen de centrumsteden
                         Tienen,<br>
-                        Sint-Truiden en Landen.
-
-                        Wij bieden plaats aan 12 kinderen en jongeren, van 0 tot 18 jaar, zowel jongens als meisjes.<br>
-                        Zij kunnen omwille van omstandigheden tijdelijk niet bij hun ouders blijven. Naast de
-                        residentiële<br>
-                        opvang voorzien we ook in begeleiding van de jongeren en hun context.<br></p>
+                        Sint-Truiden en Landen.</p>
                 </div>
             </div>
         </div>
@@ -67,41 +62,57 @@
             <div class="aboutus">
                 <div class="Visie">
                     <h2>Visie</h2>
+
+
+
                     <p>- Bestrijden van de negatieve effecten van verwaarlozing<br></p>
                     <p>- Individuele affectieve aandacht<br></p>
                     <p>- Adequate professionele competenties en persoonskenmerken: de ideale mix voor een degelijk
                         team<br></p>
-                    <p>- Vraaggerichtheid en participatie, zorg op maat<br></p>
-                    <p>- Contextbegeleiding<br></p>
-                    <p>- Acceptatie<br></p>
-                    <p>- Emancipatie<br></p>
-                    <p>- Toegankelijkheid<br></p>
-                    <p>- Gezond bewustzijn van eigen competenties en beperkingen<br></p>
+                    <span id="dots">...</span><span id="more">
+                        <p>- Vraaggerichtheid en participatie, zorg op maat<br></p>
+                        <p>- Contextbegeleiding<br></p>
+                        <p>- Acceptatie<br></p>
+                        <p>- Emancipatie<br></p>
+                        <p>- Toegankelijkheid<br></p>
+                        <p>- Gezond bewustzijn van eigen competenties en beperkingen<br></p>
+                    </span></p>
+
+                    <button onclick="myFunction()" id="myBtn">Read more</button>
                 </div>
                 <div class="Missie">
                     <h2>Missie</h2>
                     <p>Huize Levenslust richt zich, als residentiële voorziening binnen de Bijzondere Jeugdbijstand,
                         naar kinderen en jongeren, die zich in een problematische opvoedingssituatie bevinden.
                         Onze missie is de ontplooiingskansen van deze jongeren te vrijwaren en hun welzijn en gezondheid
-                        te bevorderen.</p>
-                    <p>Met onze werking willen wij een bijdrage leveren aan een zo volledig mogelijke
-                        integratie van deze specifieke groep minderjarigen in de maatschappij. Wij beogen zorg op maat
-                        aan te bieden. Binnen deze algemene doelgroep richt Levenslust zich, in het bijzonder, op
-                        kinderen en jongeren, die nauwelijks kunnen terugvallen op een familiaal netwerk.
-                    </p>
+                        te bevorderen.
+                        <span id="dots">...</span><span id="more">
+                            Met onze werking willen wij een bijdrage leveren aan een zo volledig mogelijke
+                            integratie van deze specifieke groep minderjarigen in de maatschappij. Wij beogen zorg op
+                            maat
+                            aan te bieden. Binnen deze algemene doelgroep richt Levenslust zich, in het bijzonder, op
+                            kinderen en jongeren, die nauwelijks kunnen terugvallen op een familiaal netwerk.</span></p>
+
+                    <button onclick="myFunction()" id="myBtn">Read more</button>
                 </div>
 
                 <div class="Doelstellingen">
                     <h2>Doelstellingen</h2>
-
-                    <p> De doelstelling van Levenslust is in de eerste plaats het bieden van opvang aan die jongeren die
+                    <p>De doelstelling van Levenslust is in de eerste plaats het bieden van opvang aan die jongeren die
                         (tijdelijk) niet meer thuis kunnen verblijven, en het begeleiden van hen en hun gezin. Bijna
                         altijd ligt een problematische opvoedingssituatie aan de grondslag van de plaatsing. Wij willen
-                        een perspectief bieden binnen deze plaatsing. </p>
-                    <p>Een mogelijkheid om veranderings-processen op gang te brengen, bij de jongere zelf en in zijn
-                        gezinscontext. We
-                        stellen concrete doelstellingen op, in gezamenlijk overleg met de verschillende betrokkenen, en
-                        baseren deze op de algemene doelstellingen, ons aangereikt door de verwijzende instanties.</p>
+                        een perspectief bieden binnen deze plaatsing, een mogelijkheid om veranderings-processen op gang
+                        te brengen.
+                        <span id="dots">...</span><span id="more">
+                            Bij de jongere zelf en in zijn gezinscontext. We
+                            stellen concrete doelstellingen op, in gezamenlijk overleg met de verschillende betrokkenen,
+                            en baseren deze op de algemene doelstellingen, ons aangereikt door de verwijzende
+                            instanties.
+                            Onze adolescenten, met weinig perspectief op een terugkeer naar huis, bereiden wij voor om
+                            op
+                            termijn zelfstandig en alleen te kunnen wonen.</span></p>
+
+                    <button onclick="myFunction()" id="myBtn">Read more</button>
 
 
                 </div>
@@ -126,11 +137,34 @@
                 </div>
             </div>
             <div class="kaart">
+                <h2>Sint-Truidensesteenweg<br>190
+                    3350 Linter</h2>
                 <img src="images/Capture d’écran 2022-08-29 à 17.02.01.png" alt="#">
             </div>
         </div>
     </main>
     <footer>
+        <!----------------------------------------script---------------------------------->
+        <script>
+            function myFunction() {
+                var dots = document.getElementById("dots");
+                var moreText = document.getElementById("more");
+                var btnText = document.getElementById("myBtn");
+
+                if (dots.style.display === "none") {
+                    dots.style.display = "inline";
+                    btnText.innerHTML = "Read more";
+                    moreText.style.display = "none";
+                } else {
+                    dots.style.display = "none";
+                    btnText.innerHTML = "Read less";
+                    moreText.style.display = "inline";
+                }
+            }
+        </script>
+
+
+
         <p>© 2022/ADAHCHOUR NAWFAL/Huizenlevenslust:Organisatie voor Bijzondere Jeugdzorg </p>
     </footer>
 </body>
