--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="start">
                     <div id="myLinks">
                         <nav>
-                            <a href="#home">Home</a>
-                            <a href="#aboutus">About us</a>
-                            <a href="#contact">Contact</a>
+                            <a class="homee" href="#home">Home</a>
+                            <a class="aboutt" href="#aboutus">About us</a>
+                            <a class="conne" href="#contact">Contact</a>
 
                         </nav>
                     </div>
@@ -69,7 +69,7 @@
                     <p>- Individuele affectieve aandacht<br></p>
                     <p>- Adequate professionele competenties en persoonskenmerken: de ideale mix voor een degelijk
                         team<br></p>
-                    <span id="dots">...</span><span id="more">
+                    <span id="dots1">...</span><span id="more1">
                         <p>- Vraaggerichtheid en participatie, zorg op maat<br></p>
                         <p>- Contextbegeleiding<br></p>
                         <p>- Acceptatie<br></p>
@@ -78,7 +78,7 @@
                         <p>- Gezond bewustzijn van eigen competenties en beperkingen<br></p>
                     </span></p>
 
-                    <button onclick="myFunction()" id="myBtn">Read more</button>
+                    <button onclick="readmore1()" id="myBtn1">Read more</button>
                 </div>
                 <div class="Missie">
                     <h2>Missie</h2>
@@ -86,14 +86,14 @@
                         naar kinderen en jongeren, die zich in een problematische opvoedingssituatie bevinden.
                         Onze missie is de ontplooiingskansen van deze jongeren te vrijwaren en hun welzijn en gezondheid
                         te bevorderen.
-                        <span id="dots">...</span><span id="more">
+                        <span id="dots2">...</span><span id="more2">
                             Met onze werking willen wij een bijdrage leveren aan een zo volledig mogelijke
                             integratie van deze specifieke groep minderjarigen in de maatschappij. Wij beogen zorg op
                             maat
                             aan te bieden. Binnen deze algemene doelgroep richt Levenslust zich, in het bijzonder, op
                             kinderen en jongeren, die nauwelijks kunnen terugvallen op een familiaal netwerk.</span></p>
 
-                    <button onclick="myFunction()" id="myBtn">Read more</button>
+                    <button onclick="readmore2()" id="myBtn2">Read more</button>
                 </div>
 
                 <div class="Doelstellingen">
@@ -103,7 +103,7 @@
                         altijd ligt een problematische opvoedingssituatie aan de grondslag van de plaatsing. Wij willen
                         een perspectief bieden binnen deze plaatsing, een mogelijkheid om veranderings-processen op gang
                         te brengen.
-                        <span id="dots">...</span><span id="more">
+                        <span id="dots3">...</span><span id="more3">
                             Bij de jongere zelf en in zijn gezinscontext. We
                             stellen concrete doelstellingen op, in gezamenlijk overleg met de verschillende betrokkenen,
                             en baseren deze op de algemene doelstellingen, ons aangereikt door de verwijzende
@@ -112,7 +112,7 @@
                             op
                             termijn zelfstandig en alleen te kunnen wonen.</span></p>
 
-                    <button onclick="myFunction()" id="myBtn">Read more</button>
+                    <button onclick="readmore3()" id="myBtn3">Read more</button>
 
 
                 </div>
@@ -146,19 +146,53 @@
     <footer>
         <!----------------------------------------script---------------------------------->
         <script>
-            function myFunction() {
-                var dots = document.getElementById("dots");
-                var moreText = document.getElementById("more");
-                var btnText = document.getElementById("myBtn");
+            function readmore1() {
+                var dots1 = document.getElementById("dots1");
+                var moreText1 = document.getElementById("more1");
+                var btnText1 = document.getElementById("myBtn1");
 
-                if (dots.style.display === "none") {
-                    dots.style.display = "inline";
-                    btnText.innerHTML = "Read more";
-                    moreText.style.display = "none";
+                if (dots1.style.display === "none") {
+                    dots1.style.display = "inline";
+                    btnText1.innerHTML = "Read more";
+                    moreText1.style.display = "none";
                 } else {
-                    dots.style.display = "none";
-                    btnText.innerHTML = "Read less";
-                    moreText.style.display = "inline";
+                    dots1.style.display = "none";
+                    btnText1.innerHTML = "Read less";
+                    moreText1.style.display = "inline";
+                }
+            }
+        </script>
+        <script>
+            function readmore2() {
+                var dots2 = document.getElementById("dots2");
+                var moreText2 = document.getElementById("more2");
+                var btnText2 = document.getElementById("myBtn2");
+
+                if (dots2.style.display === "none") {
+                    dots2.style.display = "inline";
+                    btnText2.innerHTML = "Read more";
+                    moreText2.style.display = "none";
+                } else {
+                    dots2.style.display = "none";
+                    btnText2.innerHTML = "Read less";
+                    moreText2.style.display = "inline";
+                }
+            }
+        </script>
+        <script>
+            function readmore3() {
+                var dots3 = document.getElementById("dots3");
+                var moreText3 = document.getElementById("more3");
+                var btnText3 = document.getElementById("myBtn3");
+
+                if (dots3.style.display === "none") {
+                    dots3.style.display = "inline";
+                    btnText3.innerHTML = "Read more";
+                    moreText3.style.display = "none";
+                } else {
+                    dots3.style.display = "none";
+                    btnText3.innerHTML = "Read less";
+                    moreText3.style.display = "inline";
                 }
             }
         </script>
