--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>huizelevenslustvzw/home</title>
+    <title>huizelevenslustvzw/contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,37 +31,35 @@
             </div>
         </div>
     </header>
-
-    <!----------------------------------------home---------------------------------->
+    <!----------------------------------------contact---------------------------------->
     <main>
-        <div id="home">
-            <div class="home">
-                <div class="spatie">
-
+        <div id="contact">
+            <h1>Contact</h1>
+            <div class="contact">
+                <div class="appel">
+                    <img src="images/appel2.png" alt="#">
+                    <p>011/78.01.58</p>
                 </div>
-                <div class="text">
-                    <h1>Organisatie voor Bijzondere Jeugdzorg</h1>
-                    <p>Wat is Levenslust?
-                        Huize Levenslust is erkend als Organisatie voor Bijzondere Jeugdzorg.<br>
-                        Onze subsidiërende overheid is het Ministerie van Vlaamse Gemeenschap, Agentschap
-                        Jongerenwelzijn.<br>
-
-                        Huize Levenslust vzw is een kleinschalige voorziening in het oosten van de provincie
-                        Vlaams-Brabant.<br>
-                        De voorziening is gevestigd nabij de grens tussen de provincies Vlaams-Brabant en Limburg.<br>
-                        Orsmaal-Gussenhoven, deelgemeente van Linter is een dorpje, gelegen tussen de centrumsteden
-                        Tienen,<br>
-                        Sint-Truiden en Landen.</p>
+                <div class="fax">
+                    <img src="images/fax2.png" alt="#">
+                    <p>011/78.01.68</p>
+                </div>
+                <div class="mail">
+                    <img src="images/mail.jpeg" alt="#">
+                    <p>info@huizelevenslustvzw.be</p>
                 </div>
             </div>
+            <div class="kaart">
+                <h2>Sint-Truidensesteenweg<br>190
+                    3350 Linter</h2>
+                <img src="images/Capture d’écran 2022-08-29 à 17.02.01.png" alt="#">
+            </div>
         </div>
-
-
-
     </main>
     <footer>
         <p>© 2022/ADAHCHOUR NAWFAL/Huizenlevenslust:Organisatie voor Bijzondere Jeugdzorg </p>
     </footer>
+
 </body>
 
 </html>
