--- a/aboutus.html
+++ b/aboutus.html
@@ -42,17 +42,17 @@
 
 
 
-                    <p>- Bestrijden van de negatieve effecten van verwaarlozing<br></p>
-                    <p>- Individuele affectieve aandacht<br></p>
-                    <p>- Adequate professionele competenties en persoonskenmerken: de ideale mix voor een degelijk
+                    <p>Bestrijden van de negatieve effecten van verwaarlozing<br></p>
+                    <p>Individuele affectieve aandacht<br></p>
+                    <p>Adequate professionele competenties en persoonskenmerken: de ideale mix voor een degelijk
                         team<br></p>
                     <span id="dots1">...</span><span id="more1">
-                        <p>- Vraaggerichtheid en participatie, zorg op maat<br></p>
-                        <p>- Contextbegeleiding<br></p>
-                        <p>- Acceptatie<br></p>
-                        <p>- Emancipatie<br></p>
-                        <p>- Toegankelijkheid<br></p>
-                        <p>- Gezond bewustzijn van eigen competenties en beperkingen<br></p>
+                        <p>Vraaggerichtheid en participatie, zorg op maat<br></p>
+                        <p>Contextbegeleiding<br></p>
+                        <p>Acceptatie<br></p>
+                        <p>Emancipatie<br></p>
+                        <p>Toegankelijkheid<br></p>
+                        <p>Gezond bewustzijn van eigen competenties en beperkingen<br></p>
                     </span></p>
 
                     <button onclick="readmore1()" id="myBtn1">Read more</button>
@@ -93,7 +93,38 @@
 
 
                 </div>
+
             </div>
+            <div class="galleries">
+                <div class="gallery">
+                    <a target="_blank" href="images/salon.jpeg">
+                        <img src="images/salon.jpeg" alt="#">
+                    </a>
+                    <div class="desc">In deze ruimte kunnen de jongeren zich relaxeren.</div>
+                </div>
+
+                <div class="gallery">
+                    <a href="images/tables.jpeg">
+                        <img src="images/tables.jpeg" alt="#">
+                    </a>
+                    <div class="desc">In elke kamer zit er een bureau waarop de jongeren kunnen studeren.</div>
+                </div>
+
+                <div class="gallery">
+                    <a href="images/exterieur.jpeg">
+                        <img src="images/exterieur.jpeg" alt="#">
+                    </a>
+                    <div class="desc">Hier ziet u de de buitenkant van het gebouw.</div>
+                </div>
+
+                <div class="gallery">
+                    <a href="images/chambre.jpeg">
+                        <img src="images/chambre.jpeg" alt="#">
+                    </a>
+                    <div class="desc">Hier ziet u de kamers waar de jongeren elke dag logeren.</div>
+                </div>
+            </div>
+
         </div>
     </main>
     <footer>
