--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
                         Huize Levenslust is erkend als Organisatie voor Bijzondere Jeugdzorg.<br>
                         Onze subsidiërende overheid is het Ministerie van Vlaamse Gemeenschap, Agentschap
                         Jongerenwelzijn.<br>
-
-                        Huize Levenslust vzw is een kleinschalige voorziening in het oosten van de provincie
-                        Vlaams-Brabant.<br>
-                        De voorziening is gevestigd nabij de grens tussen de provincies Vlaams-Brabant en Limburg.<br>
-                        Orsmaal-Gussenhoven, deelgemeente van Linter is een dorpje, gelegen tussen de centrumsteden
-                        Tienen,<br>
-                        Sint-Truiden en Landen.</p>
                 </div>
+                <div class="spatie2">
+                    <img src="images/vlaamse overheid transparant.png" alt="#">
+
+                </div>
+
             </div>
         </div>
 
